Deluge 0.9.08 - "1.0.0_RC8" (27 August 2008)
 Core:
  * Attempt to automatically upgrade a 0.5.x state file to new format
  * Tracker errors now change the tracker status
 
 Plugins:
  * Fix bug in Blocklist that prevented downloading a new file every X days
  
 GtkUI:
  * Sort filenames alphabetically in add torrent dialog
  * Fix setting file priorities on folders
  * Fix #453 allow showing of text in the toolbar buttons
  
Deluge 0.9.07 - "1.0.0_RC7" (18 August 2008)
 Core:
  * Fix loading torrents from state when fastresume file is missing
  * Fix UPnP
  * Fix to prevent Deluge from segfaulting when trying to autoadd an incomplete torrent file
  * Fix #407 possible negative ETA

 GtkUI:
  * Add 'edit' to edit trackers dialog
  * Improve performance of initial torrent list load
  * Fix hiding the bottom pane when disabling all the tabs
  * Fix not showing new torrents if you don't use the All label first
  * Fix size units to be more accurate
  * Fix torrentview sorting to be persistent
  * Fix not displaying file list when state changes
  * Expand root folder in files tab by default

 Null:
  * Fix #415 crash when using 'config-set' with no parameters
  
 Windows:
  * Fix Vista slowness issue
  * Fix properly shutting Deluge down when system shuts down
  * Fix opening folders/files
  
Deluge 0.9.06 - "1.0.0_RC6" (13 August 2008)
 Core:
  * Fix CPU spikes

 GtkUI:
  * Fix move storage dialog when connected to a remote daemon
  
Deluge 0.9.05 - "1.0.0_RC5" (04 August 2008)
 Core:
  * Fix deluged running with ssh X forwarding by removing the Gnome lib import
  * Save resume data periodically to help prevent data loss
  * Fix queue order shuffling on restart
 
 GtkUI:
  * Handle shutting down more cleanly
  * Add translators to credits
  
 Plugins:
  * Improve the Blocklist plugin preferences page.
  
 Windows:
  * Fix drag n' drop support
  
Deluge 0.9.04 - "1.0.0_RC4" (29 July 2008)
 Core:
  * Fix building with gcc 4.3