@@ -1,3 +1,7 @@
+Deluge 0.9.09 - "1.0.0_RC9" (In Development)
+ GtkUI:
+  * Fix add torrent dialog closing preventing another dialog from being shown
+
 Deluge 0.9.08 - "1.0.0_RC8" (27 August 2008)
  Core:
   * Attempt to automatically upgrade a 0.5.x state file to new format
